# zabbix

./: .gitignore  ChangeLog  Makefile.am  configure.ac
ChangeLog.d/bugfix/: ZBX-17281  ZBX-18142  ZBX-18144  ZBX-18474  ZBX-18573  ZBX-18971  ZBX-19038  ZBX-19081  ZBX-19088  ZBX-19107  ZBX-19118  ZBX-19271  ZBX-19308  ZBX-19323
ChangeLog.d/feature/: ZBXNEXT-6470  ZBXNEXT-6555  ZBXNEXT-6566  ZBXNEXT-6781
create/src/: schema.tmpl
database/: Makefile.am
database/mssql/: Makefile.am  double.sql
frontends/php/include/: defines.inc.php  items.inc.php
include/: common.h  db.h  version.h  zbxjson.h  zbxregexp.h
sass/stylesheets/sass/: hc-dark.scss  hc-light.scss  screen.scss
src/go/: Makefile.am
src/go/conf/: zabbix_agent2.conf  zabbix_agent2.win.conf
src/go/pkg/tlsconfig/: tlsconfig.go
src/go/pkg/zbxlib/: expressions.go  logfile.go
src/go/plugins/oracle/: config.go  conn.go  metrics.go  oracle.go
src/go/plugins/system/cpu/: cpu_windows.go
src/go/plugins/vfs/file/: regexp.go
src/go/plugins/web/: web.go
src/libs/: Makefile.am
src/libs/zbxalgo/: evaluate.c
src/libs/zbxaudit/: Makefile.am  audit.c  audit.h
src/libs/zbxcommon/: Makefile.am  cuid.c  misc.c  str.c
src/libs/zbxdb/: db.c
src/libs/zbxdbhigh/: Makefile.am  host.c  template.h  template_item.c
src/libs/zbxdbupgrade/: dbupgrade_4000.c  dbupgrade_5000.c  dbupgrade_5010.c  dbupgrade_5020.c  dbupgrade_5030.c
src/libs/zbxembed/: httprequest.c
src/libs/zbxjson/: jsonpath.c
src/libs/zbxregexp/: zbxregexp.c
src/libs/zbxsys/: threads.c
src/zabbix_agent/: active.c  active.h  cpustat.c  procstat.c  stats.c
src/zabbix_agent/logfiles/: Makefile.am  logfiles.c  logfiles.h  persistent_state.c  persistent_state.h
src/zabbix_sender/: Makefile.am
src/zabbix_server/: Makefile.am  actions.c  operations.c  server.c
src/zabbix_server/httppoller/: httpmacro.c  httptest.c
src/zabbix_server/lld/: lld.c  lld.h  lld_graph.c  lld_host.c  lld_item.c  lld_manager.c  lld_manager.h  lld_protocol.c  lld_protocol.h  lld_trigger.c
src/zabbix_server/poller/: checks_simple_vmware.c  checks_snmp.c  poller.c
src/zabbix_server/preprocessor/: item_preproc.c  preproc_manager.c  preprocessing.c
src/zabbix_server/snmptrapper/: snmptrapper.c
src/zabbix_server/vmware/: vmware.c
templates/app/activemq_jmx/: template_app_activemq_jmx.yaml
templates/app/apache_agent/: template_app_apache_agent.yaml
templates/app/apache_http/: template_app_apache_http.yaml
templates/app/aranet/: README.md  aranet_cloud.yaml  template_app_aranet.xml
templates/app/ceph_agent2/: template_app_ceph_agent2.yaml
templates/app/docker/: template_app_docker.yaml
templates/app/elasticsearch_http/: template_app_elasticsearch_http.yaml
templates/app/etcd_http/: template_app_etcd_http.yaml
templates/app/exchange/: template_app_exchange.yaml
templates/app/exchange_active/: template_app_exchange_active.yaml
templates/app/generic_java_jmx/: template_app_generic_java_jmx.yaml
templates/app/gitlab_http/: template_app_gitlab_http.yaml
templates/app/hadoop_http/: template_app_hadoop_http.yaml
templates/app/haproxy_agent/: template_app_haproxy_agent.yaml
templates/app/haproxy_http/: template_app_haproxy_http.yaml
templates/app/iis_agent/: template_app_iis_agent.yaml
templates/app/iis_agent_active/: template_app_iis_agent_active.yaml
templates/app/jenkins/: template_app_jenkins.yaml
templates/app/kafka_jmx/: template_app_kafka_jmx.yaml
templates/app/memcached/: template_app_memcached.yaml
templates/app/nginx_agent/: template_app_nginx_agent.yaml
templates/classic/: template_app_ftp_service.yaml  template_app_http_service.yaml  template_app_https_service.yaml  template_app_imap_service.yaml  template_app_ldap_service.yaml  template_app_nntp_service.yaml  template_app_ntp_service.yaml  template_app_pop_service.yaml  template_app_remote_zabbix_proxy.yaml  template_app_remote_zabbix_server.yaml  template_app_smtp_service.yaml  template_app_ssh_service.yaml  template_app_telnet_service.yaml  template_app_zabbix_proxy.yaml  template_app_zabbix_server.yaml  template_os_aix.yaml  template_os_freebsd.yaml  template_os_hp-ux.yaml  template_os_mac_os_x.yaml  template_os_openbsd.yaml  template_os_solaris.yaml  template_server_intel_sr1530_ipmi.yaml  template_server_intel_sr1630_ipmi.yaml
tests/: zbxmockjson.c
ui/: actionconf.php  hosts.php  items.php  jsLoader.php  overview.php  screens.php  templates.php
ui/include/: debug.inc.php  defines.inc.php  hosts.inc.php  items.inc.php  schema.inc.php
ui/js/: dashboard.grid.js  flickerfreescreen.js  menupopup.js  multilineinput.js
ui/js/pages/: items.js
ui/tests/: frontend.php
(+272 files in other folders)
